--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update Store Saya</title>
+    <title>SKULL HOSTING</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
@@ -12,7 +12,7 @@
     <div id="welcome-modal" class="modal">
         <div class="modal-content">
             <span class="close-btn">&times;</span>
-            <h2>Selamat Datang di Update Store Saya!</h2>
+            <h2>Selamat Datang di Store Saya!</h2>
             <p>Temukan informasi terbaru tentang produk, promosi, dan event store kami. Selamat berbelanja!</p>
             <button class="btn" id="close-modal">Tutup</button>
         </div>
@@ -20,7 +20,7 @@
 
     <header>
         <div class="container">
-            <h1>Update Store Saya</h1>
+            <h1>Informasi Store</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Beranda</a></li>
@@ -54,7 +54,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Store Saya. Semua hak dilindungi.</p>
+            <p>&copy; 2025 Store Saya. Semua hak dilindungi.</p>
         </div>
     </footer>
 
