--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontak Store Saya</title>
+    <title>SKULL HOSTING</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Update Store Saya</h1>
+            <h1>Kontak Admin SKULL</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Beranda</a></li>
@@ -24,10 +24,10 @@
     <main>
         <div class="container">
             <h2>Hubungi Kami</h2>
-            <p>Alamat: Jl. Contoh No. 123, Kota Saya, Indonesia</p>
-            <p>Email: info@storesaya.com</p>
-            <p>Telepon: +62 123 456 789</p>
-            <p>Jam Operasional: Senin - Minggu, 09:00 - 21:00</p>
+            <a href="https://wa.me/62885692038079" target="_blank" rel="noopener noreferrer">ADMIN UTAMA</a>
+            <a href="https://wa.me/62882005238717" target="_blank" rel="noopener noreferrer">ADMIN KE 2</a>
+            <p>Email : bangskulljb@gmail.com</p>
+            <p>Jam Operasional: Senin - Minggu, 09:00 - 22:00</p>
             <form id="contact-form">
                 <label for="name">Nama:</label>
                 <input type="text" id="name" required>
@@ -42,7 +42,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Store Saya. Semua hak dilindungi.</p>
+            <p>&copy; 2025 Store Saya. Semua hak dilindungi.</p>
         </div>
     </footer>
 
