--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tentang Store Saya</title>
+    <title>SKULL HOSTING</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Update Store Saya</h1>
+            <h1>Tentang Store Saya</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Beranda</a></li>
@@ -24,14 +24,34 @@
     <main>
         <div class="container">
             <h2>Tentang Store Kami</h2>
-            <p>Store Saya adalah destinasi utama untuk produk berkualitas tinggi seperti elektronik, pakaian, dan aksesoris. Kami selalu update dengan promosi terbaru dan produk baru.</p>
-            <p>Didirikan pada tahun 2020, kami berkomitmen untuk memberikan pengalaman belanja terbaik dengan harga terjangkau dan layanan pelanggan prima.</p>
+            <p>STORE SKULL HOSTING ADALAH STORE YANG MENYEDIAKAN BEBERAPA KEBUTUHAN HOSTING,
+            SEPERTI :
+            - PANEL PTERODACTLY 
+            - VPS
+            - DOMAIN
+            - AKUN DO ( DIGITAL OCEAN )
+            DLL
+            TIDAK HANYA ITU KAMI JUGA MENYEDIAKAN :
+            - JASA REKBER 
+            - JUAL BELI AKUN GAME ( FF , ML , FIFA , DLL )
+            - JASPOST
+            - DLL
+            UNTUK PANEL PTERODACTLY KAMI MENYEDIAKAN : 
+            - PANEL DARI RAM 1GB - UNLIMITED 
+            - ADMIN PANEL
+            - PARTNER PANEL
+            - OWNER PANEL 
+            - TANGAN KANAN PANEL
+            </p>
+            <p>UNTUK STORE KAMI DI DIRIKAN PADA TAHUN 2022,SEBELUMNYA SAYA SENDIRI SEORANG YANG MENAIKKAN NAMA SAYA 
+            SAMPAI SEPERTI SEKARANG,LALU SAYA MEMPUNYAI TEMAN BAIK BERNAMA MANG JUKY STORE YAITU IA MENJADI PARTNER SAYA,
+            UNTUK NOMORNYA ADA DI KONTAK KAMI YA,YAITU ADMIN KE 2,TERIMA KASIH TELAH BERKUNJUNGA KE WEBSITE SAYA.</p>
         </div>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Store Saya. Semua hak dilindungi.</p>
+            <p>&copy; 2025 Store Saya. Semua hak dilindungi.</p>
         </div>
     </footer>
 </body>
