--- a/about.html
+++ b/about.html
@@ -23,29 +23,40 @@
 
     <main>
         <div class="container">
-            <h2>Tentang Store Kami</h2>
-            <p>STORE SKULL HOSTING ADALAH STORE YANG MENYEDIAKAN BEBERAPA KEBUTUHAN HOSTING,
-            SEPERTI :
-            - PANEL PTERODACTLY 
-            - VPS
-            - DOMAIN
-            - AKUN DO ( DIGITAL OCEAN )
-            DLL
-            TIDAK HANYA ITU KAMI JUGA MENYEDIAKAN :
-            - JASA REKBER 
-            - JUAL BELI AKUN GAME ( FF , ML , FIFA , DLL )
-            - JASPOST
-            - DLL
-            UNTUK PANEL PTERODACTLY KAMI MENYEDIAKAN : 
-            - PANEL DARI RAM 1GB - UNLIMITED 
-            - ADMIN PANEL
-            - PARTNER PANEL
-            - OWNER PANEL 
-            - TANGAN KANAN PANEL
-            </p>
-            <p>UNTUK STORE KAMI DI DIRIKAN PADA TAHUN 2022,SEBELUMNYA SAYA SENDIRI SEORANG YANG MENAIKKAN NAMA SAYA 
-            SAMPAI SEPERTI SEKARANG,LALU SAYA MEMPUNYAI TEMAN BAIK BERNAMA MANG JUKY STORE YAITU IA MENJADI PARTNER SAYA,
-            UNTUK NOMORNYA ADA DI KONTAK KAMI YA,YAITU ADMIN KE 2,TERIMA KASIH TELAH BERKUNJUNGA KE WEBSITE SAYA.</p>
+  <h2>Tentang Store Kami</h2>
+  <p>STORE SKULL HOSTING ADALAH STORE YANG MENYEDIAKAN BEBERAPA KEBUTUHAN HOSTING, SEPERTI:</p>
+  <ul>
+    <li>Panel Pterodactyl</li>
+    <li>VPS</li>
+    <li>Domain</li>
+    <li>Akun DO (Digital Ocean)</li>
+    <li>Dll</li>
+  </ul>
+
+  <p>Tidak hanya itu, kami juga menyediakan:</p>
+  <ul>
+    <li>Jasa Rekber</li>
+    <li>Jual beli akun game (FF, ML, FIFA, dll)</li>
+    <li>Jaspost</li>
+    <li>Dll</li>
+  </ul>
+
+  <p>
+    Untuk panel Pterodactyl kami menyediakan:
+  </p>
+  <ul>
+    <li>Panel dari RAM 1GB - Unlimited</li>
+    <li>Admin Panel</li>
+    <li>Partner Panel</li>
+    <li>Owner Panel</li>
+    <li>Tangan Kanan Panel</li>
+  </ul>
+
+  <p>
+    Store kami didirikan pada tahun 2022. Sebelumnya saya sendiri yang menaikkan nama Skull Hosting sampai seperti sekarang. 
+    Lalu saya mempunyai teman baik bernama <b>Mang Juky Store</b> yang menjadi partner saya. 
+    Untuk nomornya ada di bagian kontak kami (Admin ke-2). Terima kasih telah berkunjung ke website kami.
+  </p>
         </div>
     </main>
 
