--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@
     <main>
         <div class="container">
             <h2>Hubungi Kami</h2>
-            <p> ADMIN UTAMA ( SKULL HOSTING )
+            <p> ADMIN UTAMA ( SKULL HOSTING ) :
             <a href="https://wa.me/6285692038079" target="_blank" rel="noopener noreferrer">ADMIN UTAMA</a></p>
-            <p> ADMIN KE 2 ( MANG JUKY STORE )</p>
-            <a href="https://wa.me/62882005238717" target="_blank" rel="noopener noreferrer">ADMIN KE 2</a>
+            <p> ADMIN KE 2 ( MANG JUKY STORE ) : 
+            <a href="https://wa.me/62882005238717" target="_blank" rel="noopener noreferrer">ADMIN KE 2</a></p>
             <p>Email : bangskulljb@gmail.com</p>
             <p>Jam Operasional: Senin - Minggu, 09:00 - 22:00</p>
             <form id="contact-form">
