--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,8 @@
             <a href="https://wa.me/6285692038079" target="_blank" rel="noopener noreferrer">ADMIN UTAMA</a></p>
             <p> ADMIN KE 2 ( MANG JUKY STORE ) : 
             <a href="https://wa.me/62882005238717" target="_blank" rel="noopener noreferrer">ADMIN KE 2</a></p>
-            <p>Email : bangskulljb@gmail.com</p>
+            <p>Email Admin Utama : 
+            <a href="mailto:bangskulljb@gmail.com">bangskulljb@gmail.com</a></p>
             <p>Jam Operasional: Senin - Minggu, 09:00 - 22:00</p>
             <form id="contact-form">
                 <label for="name">Nama:</label>
