--- a/admin.html
+++ b/admin.html
@@ -1,48 +1,74 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Admin - Update Store Saya</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script> <!-- Script Supabase -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Admin - Dashboard</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Dashboard Admin</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Kembali ke Beranda</a></li>
-                </ul>
-            </nav>
+  <header>
+    <div class="container">
+      <div class="brand">SKULL HOSTING - Admin</div>
+      <nav><ul><li><a href="index.html">Kembali ke Beranda</a></li></ul></nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <!-- LOGIN -->
+    <div id="login-panel" class="panel">
+      <h3>Login Admin</h3>
+      <div class="form-row">
+        <input id="username" class="input small" placeholder="Username" />
+        <input id="password" type="password" class="input small" placeholder="Password" />
+        <button id="login-btn" class="btn">Login</button>
+      </div>
+      <p style="color:var(--muted);font-size:.95rem">Admin hanya bisa diakses lewat halaman ini. Tidak ada link di beranda.</p>
+    </div>
+
+    <!-- DASHBOARD (hidden sebelum login) -->
+    <div id="dashboard" style="display:none">
+      <section class="panel admin-wrap">
+        <h3>Slider (maks 5 foto)</h3>
+
+        <div style="display:flex;gap:12px;align-items:center;flex-wrap:wrap">
+          <input id="slide-title" class="input" placeholder="Judul slide (opsional)" />
+          <input id="slide-desc" class="input" placeholder="Deskripsi singkat (opsional)" />
+          <input id="slide-file" type="file" accept="image/*" />
+          <button id="add-slide-btn" class="btn">Tambah Slide</button>
         </div>
-    </header>
 
-    <main>
-        <div class="container">
-            <h2>Edit Update Terbaru Store (Carousel)</h2>
-            <div id="carousel-editor">
-                <!-- Form edit carousel akan diisi oleh JS -->
-            </div>
-            <button class="btn" id="add-carousel-slide">Tambah Slide Carousel</button>
-            <button class="btn" id="save-carousel">Simpan Carousel</button>
+        <div id="slides-list" class="item-list"></div>
+        <div style="margin-top:8px"><button id="save-slides" class="btn">Simpan Semua Perubahan</button></div>
+      </section>
 
-            <h2>Edit Informasi Lainnya (Berita)</h2>
-            <div id="news-editor">
-                <!-- Form edit berita akan diisi oleh JS -->
-            </div>
-            <button class="btn" id="add-news-item">Tambah Berita</button>
-            <button class="btn" id="save-news">Simpan Berita</button>
+      <section class="panel admin-wrap" style="margin-top:18px">
+        <h3>Informasi / Berita</h3>
+        <div class="form-row">
+          <input id="news-title" class="input" placeholder="Judul berita" />
         </div>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2023 Store Saya. Semua hak dilindungi.</p>
+        <div class="form-row">
+          <textarea id="news-summary" placeholder="Isi / ringkasan berita ..." class="input"></textarea>
         </div>
-    </footer>
+        <div class="form-row">
+          <input id="news-image" class="input" placeholder="URL gambar (opsional)" />
+          <input id="news-file" type="file" accept="image/*"/>
+          <button id="add-news-btn" class="btn">Tambah Berita</button>
+        </div>
 
-    <script src="js/script.js"></script>
+        <div id="news-list" class="item-list"></div>
+        <div style="margin-top:8px"><button id="save-news-btn" class="btn">Simpan Semua Berita</button></div>
+      </section>
+    </div>
+  </main>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 Store Saya. Semua hak dilindungi.</p>
+    </div>
+  </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
