--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
 
       <div id="news-section">
-        <h3>Informasi Lainnya</h3>
+        <h3 style="margin-top:18px;">Informasi Lainnya</h3>
         <div id="news-container" class="news-grid"></div>
       </div>
     </section>
